test/errors/e28.gm
Proc C(y: Bool) {
    Int x = 2 + ( y ? INF : 3);
    Int z = INF + 3;
}
